chore: update package name from @my-widgets/ui to @mahabeer-dev/widgets-ui
Update all references to the old package name in documentation, installation instructions, and imports to reflect the new package name @mahabeer-dev/widgets-ui

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-widgets/ui",
+  "name": "@mahabeer-dev/widgets-ui",
   "version": "1.0.0",
   "description": "A beautiful, production-ready React component library",
   "main": "./dist/index.js",
